--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li> -->
         </ul>
-        <form class="d-flex">
+        <!-- <form class="d-flex">
           <input class="form-control me-2" id="searchTxt" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">
             Search
           </button>
-        </form>
+        </form> -->
       </div>
     </div>
   </nav>
